<resources>
    <string name="app_name">Musical Structure App</string>
    <string name="depeche_mode">Depeche Mode</string>
    <string name="exciter">Exciter</string>
    <string name="george_michael">George Michael</string>
    <string name="older">Older</string>
    <string name="jamiroquai">Jamiroquai</string>
    <string name="linkin_park">Linkin Park</string>
    <string name="camouflage">Camouflage</string>
    <string name="greyscale">Greyscale</string>
    <string name="zero">zero</string>
    <string name="dream_on">Dream On</string>
    <string name="shine">Shine</string>
    <string name="laughing">Laughing</string>
    <string name="in_the_cloud">In the Cloud</string>
    <string name="count_on_me">Count On Me</string>
    <string name="still">Still</string>
    <string name="misery">Misery</string>
    <string name="leave_your_room_behind">Leave Your Room Behind</string>
    <string name="light_grey">Light Grey</string>
    <string name="song_if">If..</string>
    <string name="end_of_words">End of Words</string>
    <string name="dark_grey">Dark Grey</string>
    <string name="I_will_find">I\'ll Find</string>
    <string name="the_sweetest_condition">The Sweetest Condition</string>
    <string name="when_the_body_speaks">When The Body Speaks</string>
    <string name="the_dead_of_night">The Dead Of Night</string>
    <string name="lovetheme">Lovetheme</string>
    <string name="freelove">Freelove</string>
    <string name="comatose">Comatose</string>
    <string name="i_feel_loved">I Feel Loved</string>
    <string name="breathe">Breathe</string>
    <string name="easy_tiger">Easy Tiger</string>
    <string name="i_am_you">I Am You</string>
    <string name="goodnight_lovers">Goodnight Lovers</string>
    <string name="jesus_to_a_child">Jesus To A Child</string>
    <string name="fastlove">Fastlove</string>
    <string name="spinning_the_wheel">Spinning The Wheel</string>
    <string name="it_doesnt_really_matter">It Doesn\'t Really Matter</string>
    <string name="the_strangest_thing">The Strangest Thing</string>
    <string name="to_be_forgiven">To Be Forgiven</string>
    <string name="move_on">Move On</string>
    <string name="star_people">Star People</string>
    <string name="you_have_been_loved">You Have Been Loved</string>
    <string name="free">Free</string>
    <string name="automaton">Automaton</string>
    <string name="shake_it_on">Shake It On</string>
    <string name="cloud_9">Cloud 9</string>
    <string name="superfresh">Superfresh</string>
    <string name="hot_property">Hot Property</string>
    <string name="something_about_you">Something About You</string>
    <string name="summer_girl">Summer Girl</string>
    <string name="nights_out_in_the_jungle">Nights Out in the Jungle</string>
    <string name="dr_buzz">Dr Buzz</string>
    <string name="we_can_do_it">We Can Do It</string>
    <string name="vitamin">Vitamin</string>
    <string name="carla">Carla</string>
    <string name="one_more_light_live">One More Light Live</string>
    <string name="talking_to_myself">Talking to Myself</string>
    <string name="burn_it_down">Burn It Down</string>
    <string name="battle_symphony">Battle Symphony</string>
    <string name="new_divide">New Divide</string>
    <string name="invisible">Invisible</string>
    <string name="nobody_can_save_me">Nobody Can Save Me</string>
    <string name="one_more_light">One More Light</string>
    <string name="crawling">Crawling</string>
    <string name="leave_out_all_the_rest">Leave Out All the Rest</string>
    <string name="good_goodbye">Good Goodbye</string>
    <string name="what_i_have_done">What I\'ve Done</string>
    <string name="in_the_end">In the End</string>
    <string name="sharp_edges">Sharp Edges</string>
    <string name="numb">Numb</string>
    <string name="heavy">Heavy</string>
    <string name="bleed_it_out">Bleed It Out</string>


</resources>
