<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/DM_pic"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginBottom="@dimen/image_margin_bottom"
                android:contentDescription="@string/zero"
                android:src="@drawable/dm_exciter_pic" />

            <TextView
                android:id="@+id/Depeche_Mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/DM_pic"
                android:layout_toRightOf="@+id/DM_pic"
                android:text="@string/depeche_mode"
                android:textSize="@dimen/head_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Depeche_Mode"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/DM_pic"
                android:layout_toRightOf="@+id/DM_pic"
                android:text="@string/exciter"
                android:textSize="@dimen/body_text_size" />

            <Button
                android:id="@+id/dmButton"
                android:layout_width="@dimen/album_button_width"
                android:layout_height="@dimen/album_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/play_button" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/GM_pic"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginBottom="@dimen/image_margin_bottom"
                android:contentDescription="@string/zero"
                android:src="@drawable/gm_older_pic" />

            <TextView
                android:id="@+id/GeorgeMichael"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/GM_pic"
                android:layout_toRightOf="@+id/GM_pic"
                android:text="@string/george_michael"
                android:textSize="@dimen/head_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/GeorgeMichael"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/GM_pic"
                android:layout_toRightOf="@+id/GM_pic"
                android:text="@string/older"
                android:textSize="@dimen/body_text_size"/>

            <Button
                android:id="@+id/gmButton"
                android:layout_width="@dimen/album_button_width"
                android:layout_height="@dimen/album_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/play_button" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/J_pic"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginBottom="@dimen/image_margin_bottom"
                android:contentDescription="@string/zero"
                android:src="@drawable/j_automaton_pic" />

            <TextView
                android:id="@+id/Jamiroquai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/J_pic"
                android:layout_toRightOf="@+id/J_pic"
                android:text="@string/jamiroquai"
                android:textSize="@dimen/head_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Jamiroquai"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/J_pic"
                android:layout_toRightOf="@+id/J_pic"
                android:text="@string/automaton"
                android:textSize="@dimen/body_text_size" />

            <Button
                android:id="@+id/jButton"
                android:layout_width="@dimen/album_button_width"
                android:layout_height="@dimen/album_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/play_button" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/LP_pic"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginBottom="@dimen/image_margin_bottom"
                android:contentDescription="@string/zero"
                android:src="@drawable/lp_one_more_light_live_pic" />

            <TextView
                android:id="@+id/LinkinPark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/LP_pic"
                android:layout_toRightOf="@+id/LP_pic"
                android:text="@string/linkin_park"
                android:textSize="@dimen/head_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinkinPark"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/LP_pic"
                android:layout_toRightOf="@+id/LP_pic"
                android:text="@string/one_more_light_live"
                android:textSize="@dimen/body_text_size"/>

            <Button
                android:id="@+id/lpButton"
                android:layout_width="@dimen/album_button_width"
                android:layout_height="@dimen/album_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/play_button" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/C_pic"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_marginBottom="@dimen/image_margin_bottom"
                android:contentDescription="@string/zero"
                android:src="@drawable/c_greyscale_pic" />

            <TextView
                android:id="@+id/Camouflage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/C_pic"
                android:layout_toRightOf="@+id/C_pic"
                android:text="@string/camouflage"
                android:textSize="@dimen/head_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Camouflage"
                android:layout_marginLeft="@dimen/text_margin_left"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_toEndOf="@+id/C_pic"
                android:layout_toRightOf="@+id/C_pic"
                android:text="@string/greyscale"
                android:textSize="@dimen/body_text_size" />

            <Button
                android:id="@+id/cButton"
                android:layout_width="@dimen/album_button_width"
                android:layout_height="@dimen/album_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/play_button" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>